--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^6.0.1",
     "prettier": "^2.2.1",
     "sass": "^1.40.1",
     "sass-loader": "^8.0.2",
