--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"test": "jest",
     "test:unit": "vue-cli-service test:unit --coverage",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+		"cy": "cypress open"
   },
   "dependencies": {
     "core-js": "^3.6.5",
